objects/sumoapp__Process__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__IfLeadIdIsPassed__c</fullName>
        <label>If LEAD ID is passed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SKIP_LEAD_FORM</fullName>
                    <default>true</default>
                    <label>Skip the Lead Form - Skip the Lead Form when a Lead ID is passed in the URL.</label>
                </value>
                <value>
                    <fullName>PREPOPULATE_LEAD_FORM</fullName>
                    <label>Prepopulate the Lead Form - Pre-Populate the Lead Form when a Lead ID is passed in the URL and update the lead with any changes made in the lead form data. This does not include hidden fields.</label>
                </value>
                <value>
                    <fullName>PREPOPULATE_READ_ONLY</fullName>
                    <label>Prepopulate Read-Only - Pre-Populate the Lead Form when a Lead ID is passed in the URL, but make it read-only, so the user can not make any changes.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__IfLeadIsConverted__c</fullName>
        <label>If LEAD is converted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SCHEDULE_CONTACT</fullName>
                    <default>true</default>
                    <label>Schedule Contact - Self-Schedule Against the Contact that Resulted from the Converted Lead.</label>
                </value>
                <value>
                    <fullName>CREATE_NEW_LEAD</fullName>
                    <label>Create New Lead - Display the Lead Form, create a New Lead, and Self-Schedule Against the New Lead.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__IfLeadOwnerCanNotBeHost__c</fullName>
        <label>If Lead Owner can&apos;t be host</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USE_ASSIGNMENT_LOGIC</fullName>
                    <default>true</default>
                    <label>Assignment Logic</label>
                </value>
                <value>
                    <fullName>USE_DEFAULT_SUMO_USER</fullName>
                    <label>Default SUMO User</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__IncludeLinkInAppointmentDescription__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Reschedule from Appointment Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IncludeLinkInEmailReminders__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Reschedule from Email Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__InviteTemplateSubType__c</fullName>
        <label>Invite Template Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>sumoapp__InviteTemplateType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>USERS</fullName>
                    <label>Users</label>
                </value>
                <value>
                    <fullName>PROFILES</fullName>
                    <label>Profiles</label>
                </value>
                <value>
                    <fullName>GROUPS</fullName>
                    <label>Groups</label>
                </value>
                <value>
                    <fullName>ClientCase__c</fullName>
                    <label>Client Case</label>
                </value>
                <value>
                    <fullName>Intake__c</fullName>
                    <label>Intake</label>
                </value>
                <value>
                    <fullName>Bank__c</fullName>
                    <isActive>false</isActive>
                    <label>Bank__c</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__InviteTemplateType__c</fullName>
        <label>Invite Template Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SALESFORCE_OBJECTS</fullName>
                    <default>true</default>
                    <label>Salesforce Objects</label>
                </value>
                <value>
                    <fullName>INVITE_LINKS_TAB</fullName>
                    <label>Invite Links Tab</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__Is12HourTimeFormat__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is 12 Hour Time Format?</description>
        <label>Time Format</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsAllowAttachmentsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Allow Attachments Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsBookedAddToGoogleButtonActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Booked Add  To Google Button Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsBookedAddToOutlookButtonActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Booked Add To Outlook Button Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsBookedPrintButtonActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Booked Print Button Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsCancelButtonActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Cancel Button Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsCaptchaActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Captcha Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsCategoryActivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activate Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsCompoundEventFormActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Last Step Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsDisplayResourcePoolsFirstActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Display Resource Pools First Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsInternalSchedulingActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Internal Scheduting?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsInviteOtherParticipantsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Invite other Participants Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsNoteForTheParticipantsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Note for the participants Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsRegistrationSectionVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Registration Section Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsReminderOptInTextActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Reminder Notification OPT-IN Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsRescheduleAgainstPool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reschedule Against Resource Pool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsRescheduleButtonActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Reschdule Button Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsResourceConfigurationEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Resource Configuration Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsShortLinkEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Short Link Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsStripeReceiptActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Stripe Receipt Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__LastStepSubHeader__c</fullName>
        <label>Last Step Sub-Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__LeadButtonLabel__c</fullName>
        <label>Lead Button Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__LeadFormFields__c</fullName>
        <label>Lead Form Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__LeadMatchingField__c</fullName>
        <label>Lead Matching Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__LeadSubHeader__c</fullName>
        <label>Lead Sub-Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__LeadTypeOptions__c</fullName>
        <label>Lead Type Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>NEW_LEAD</fullName>
                    <default>true</default>
                    <label>Create a New Lead Everytime</label>
                </value>
                <value>
                    <fullName>MATCH_LEAD_ADVANCED</fullName>
                    <label>Match Lead by Advanced Match</label>
                </value>
                <value>
                    <fullName>MATCH_LEAD_RULES</fullName>
                    <label>Match Lead by Salesforce Duplicate Rules</label>
                </value>
                <value>
                    <fullName>MATCH_LEAD</fullName>
                    <label>Match Lead on the following field</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__LeadsMatchOnlySumoRecords__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leads Match Only SUMO Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__LimitOfAttendees__c</fullName>
        <label>Limit of Attendees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__LimitOfOpenApptsErrorMessage__c</fullName>
        <defaultValue>&quot;You may only have X upcoming appointment(s) booked, which you have already reached. Please reschedule or cancel (one of) your existing appointment(s).&quot;</defaultValue>
        <label>Limit of Open Appts Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__LimitOfOpenApptsInterval__c</fullName>
        <label>Limit of Open Appts Interval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DAYS</fullName>
                    <label>Day/s</label>
                </value>
                <value>
                    <fullName>WEEKS</fullName>
                    <default>true</default>
                    <label>Week/s</label>
                </value>
                <value>
                    <fullName>MONTHS</fullName>
                    <label>Month/s</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__LimitOfOpenApptsNumberPerAttendee__c</fullName>
        <label>Limit of Open Appts Number Per Attendee</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__LimitOfOpenApptsPattern__c</fullName>
        <label>Limit of Open Appts Pattern</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ALL_ONLINE_SCHEDULERS</fullName>
                    <label>All Online Schedulers</label>
                </value>
                <value>
                    <fullName>ALL_MANUALLY_SCHEDULED</fullName>
                    <label>All Manually Scheduled</label>
                </value>
                <value>
                    <fullName>ALL_INVITE_LINKS</fullName>
                    <label>All Invite Links</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__LoadBalanceNextXDays__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Load Balance Next [X] days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__LocationAssignmentMode__c</fullName>
        <label>Location Assignment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZONE_BASED</fullName>
                    <default>true</default>
                    <label>Zone Based</label>
                </value>
                <value>
                    <fullName>AREA_BASED</fullName>
                    <label>Area Based</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__LocationNotes__c</fullName>
        <label>Location Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__LocationOptions__c</fullName>
        <label>Location Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VID_CONFERENCE</fullName>
                    <label>Video Conference</label>
                </value>
                <value>
                    <fullName>PHONE_INBOUND</fullName>
                    <label>Phone - You will call us</label>
                </value>
                <value>
                    <fullName>PHONE</fullName>
                    <label>Phone</label>
                </value>
                <value>
                    <fullName>OUR_LOCATION</fullName>
                    <label>Our Location</label>
                </value>
                <value>
                    <fullName>IN_HOUSE</fullName>
                    <label>Your Location</label>
                </value>
                <value>
                    <fullName>IN_PERSON</fullName>
                    <label>In Person</label>
                </value>
                <value>
                    <fullName>VIRTUAL_EVENT</fullName>
                    <label>Virtual Event</label>
                </value>
                <value>
                    <fullName>WEB_CONFERENCE</fullName>
                    <isActive>false</isActive>
                    <label>WEB_CONFERENCE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__LocationTypeSubHeader__c</fullName>
        <label>Location Type Sub-Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Locations__c</fullName>
        <label>Locations</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Logo__c</fullName>
        <label>Logo</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__MatchOnEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match on Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__MemberType__c</fullName>
        <label>Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USERS</fullName>
                    <label>Users</label>
                </value>
                <value>
                    <fullName>PROFILES</fullName>
                    <label>Profiles</label>
                </value>
                <value>
                    <fullName>GROUPS</fullName>
                    <label>Groups</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__MultiCalendarSettings__c</fullName>
        <label>Multi-Calendar Settings</label>
        <length>4500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Name__c</fullName>
        <label>Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Opacity__c</fullName>
        <defaultValue>85</defaultValue>
        <label>Opacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__OpenEventsLimit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Open Events Limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__OrganizerOptions__c</fullName>
        <label>Organizer Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MAKE_LEAD_OWNER_THE_PERSON_WHO_APPOINTMENT_WAS_SCHEDULED_WITH</fullName>
                    <default>true</default>
                    <label>Make Lead Owner the person who Appointment was Scheduled with</label>
                </value>
                <value>
                    <fullName>SCHEDULE_APPOINTMENT_WITH_LEAD_OWNER</fullName>
                    <label>Schedule Appointment with Lead Owner</label>
                </value>
                <value>
                    <fullName>DO_NOT_CHANGE_LEAD_OWNER</fullName>
                    <label>Do not change Lead Owner</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__OurLocationDetails__c</fullName>
        <label>Our Location - Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__OverrideCss__c</fullName>
        <label>Override CSS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__OverrideExistingDataAccounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Existing Data Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__OverrideExistingDataContacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Existing Data Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__OverrideExistingDataLeads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Existing Data Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__OverrideExistingData__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Existing Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__PaymentConnectorId__c</fullName>
        <label>Payment Connector ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__PaymentSubHeader__c</fullName>
        <label>Payment Sub Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__PaymentType__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DO_NOT_COLLECT_PAYMENTS</fullName>
                    <default>true</default>
                    <label>Do not collect payments</label>
                </value>
                <value>
                    <fullName>COLLECT_PAYMENTS_WITH_STRIPE</fullName>
                    <label>Collect payments with Stripe</label>
                </value>
                <value>
                    <fullName>COLLECT_PAYMENTS_USING_MY_OWN_PAYMENT_CONNECTOR</fullName>
                    <label>Collect payments using my own payment connector</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__PhoneInboundDetails__c</fullName>
        <label>Phone - You Will Call Us - Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__PortalFormAction__c</fullName>
        <label>Portal Form Action</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sumoapp__PriorityAssignmentMode__c</fullName>
        <label>Priority Based Assignment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>sumoapp__AssignmentEngineMode__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LOAD_BALANCE</fullName>
                    <label>Load-Balance</label>
                </value>
                <value>
                    <fullName>ROUND_ROBIN</fullName>
                    <label>Round-Robin</label>
                </value>
                <value>
                    <fullName>RANDOM</fullName>
                    <label>Random</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__PriorityBasedNextXDays__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Priority Based Next [X] days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__ProcessType__c</fullName>
        <label>Process Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LEADS</fullName>
                    <default>true</default>
                    <label>Prospect Scheduling with Leads</label>
                </value>
                <value>
                    <fullName>BUSINESS_CONTACTS</fullName>
                    <label>Customer Scheduling (Business Contacts)</label>
                </value>
                <value>
                    <fullName>PERSON_ACCOUNTS</fullName>
                    <label>Customer Scheduling (Person Accounts)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__PushEmailReplyToCaseComment__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Push Email Reply to Case Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__RadiusToLoad__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Mile Radius to Load</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__RegisterPromoCodeLabel__c</fullName>
        <label>Register Promo Code Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__RegisterSubHeader__c</fullName>
        <label>Register Sub-Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__RegisterSubscribeLabel__c</fullName>
        <label>Register Subscribe Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__ReminderEmailOptions__c</fullName>
        <defaultValue>&quot;1_DAY_PRIOR&quot;</defaultValue>
        <label>Reminder Email Options</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>sumoapp__IsActive__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>sumoapp__ReminderOptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__ReminderFirstTextMessageOptions__c</fullName>
        <defaultValue>&quot;1_HOUR_PRIOR&quot;</defaultValue>
        <label>Reminder 1st Text Message Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>sumoapp__ReminderOptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__ReminderOptInText__c</fullName>
        <label>Reminder Notification OPT-IN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__ReminderSecondTextMessageOptions__c</fullName>
        <defaultValue>&quot;DO_NOT_SEND&quot;</defaultValue>
        <label>Reminder 2nd Text Message Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>sumoapp__ReminderOptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__ReminderTextTemplate__c</fullName>
        <label>Reminder Text Template</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__ResourceSearchCriteria__c</fullName>
        <label>Resource Search Criteria</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__ResourceSearchFieldsToDisplay__c</fullName>
        <label>Resource Search Fields To Display</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__RoomSearchCriteria__c</fullName>
        <label>Room Search Criteria</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__RoomSearchFieldsToDisplay__c</fullName>
        <label>Room Search Fields To Display</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__SendEmailToAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email To Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__SendInviteEmailTemplate__c</fullName>
        <label>Send Invite Email Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__SendPaymentLinkEmailTemplate__c</fullName>
        <label>Send Payment Link Email Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__SendRegistrationLinkTemplate__c</fullName>
        <label>Send Registration Link Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__SendToAdminEmailTemplate__c</fullName>
        <label>Send To Admin Email Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Services__c</fullName>
        <label>Services</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__SiteUrl__c</fullName>
        <label>Site URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sumoapp__SkipWhereStep__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Skip the Where Step for Virtual Meetings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__SlotIntervalGranularity__c</fullName>
        <label>Time-Slot intervals</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                    <default>true</default>
                    <label>15 minutes</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>20 minutes</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>30 minutes</label>
                </value>
                <value>
                    <fullName>60</fullName>
                    <label>60 minutes</label>
                </value>
                <value>
                    <fullName>APPOINTMENT_DURATION</fullName>
                    <label>Appointment Duration</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__StartSlotOnIntervalStart__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If enabled, time slots always start at a multiple of selected interval. If disabled, time slots start at first availble minute.</description>
        <label>Is Top Of The Interval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__TargetOriginsWhitelist__c</fullName>
        <description>Specifies what the origin of Online Scheduler host window must be for the Post Message to be dispatched.</description>
        <label>Target Origins Whitelist</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__UseContextUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Always use Context User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__UseDistanceRuleBeforePriority__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Distance Rule before Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__UseResourcePoolErrorMessage__c</fullName>
        <label>Use Resource Pool Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__UserChooseCustomError__c</fullName>
        <label>User Choose Custom Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__UserSearchCriteria__c</fullName>
        <label>User Search Criteria</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__UserSearchFieldsToDisplay__c</fullName>
        <label>User Search Fields To Display</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__VideoConferenceDetails__c</fullName>
        <label>Video Conference - Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__WaitlistEmailOptions__c</fullName>
        <label>Waitlist Email Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DO_NOT_SEND</fullName>
                    <default>true</default>
                    <label>Do not Send</label>
                </value>
                <value>
                    <fullName>ONCE_PER_DAY</fullName>
                    <label>Once per Day at:</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__WaitlistEmailStartTime__c</fullName>
        <label>Waitlist Email Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>sumoapp__WaitlistEmailTimeZone__c</fullName>
        <label>Waitlist Email Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__WaitlistReminderEmailTemplate__c</fullName>
        <label>Waitlist Reminder Email Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__WaitlistReminderSFEmailTemplate__c</fullName>
        <label>Waitlist Reminder SF Email Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__WhatSubHeader__c</fullName>
        <label>What Sub-Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__WhenDateTimeLabel__c</fullName>
        <label>When Date/Time Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__WhenDescriptionLabel__c</fullName>
        <label>When Description Label</label>
        <type>TextArea</type>
    </fields>
</CustomObject>